[package]
name = "chisel-operator"
version = "0.1.0"
edition = "2021"
description = "Chisel tunnel operator for Kubernetes"
authors = [
    "Pornpipat 'Cappy Ishihara' Popum <cappy@fyralabs.com>",
    "Lleyton Grey <lleyton@fyralabs.com>"
]
categories = ["Network programming", "Configuration"]
license = "MIT"
keywords = [
    "kubernetes",
    "tunnel",
    "chisel",
    "k8s-operator",
    "operator",
    "http",
    "tcp",
    "udp",
    "networking",
]
default-run = "chisel-operator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.82.2", features = ["runtime", "derive", "rustls-tls"] }
k8s-openapi = { version = "0.18.0", features = ["v1_26"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
serde_yaml = "0.9.21"
dotenvy = "0.15.7"
tokio = { version = "1.28.1", features = ["full"] }
tracing = { version = "0.1.37", features = ["log", "async-await"] }
color-eyre = "0.6.2"
schemars = "0.8.12"
futures = "0.3.28"
thiserror = "1.0.40"
tracing-log = "0.1.3"
# pretty_env_logger = "0.5.0"
tracing-subscriber = { version = "0.3.17", features = ["json", "env-filter"] }
tracing-logfmt = "0.3.2"
# opentelemetry = { version = "0.18.0", features = ["trace", "rt-tokio"] }
# opentelemetry-otlp = { version = "0.11.0", features = ["tokio"] }
# tonic = { version = "0.8.3" }
# tracing-opentelemetry = "0.18.0"
# opentelemetry_api = "0.18.0"

[[bin]]
name = "crdgen"
path = "src/crdgen.rs"