[package]
name = "chisel-operator"
version = "0.7.0"
edition = "2021"
description = "Chisel tunnel operator for Kubernetes"
authors = [
    "Pornpipat 'Cappy Ishihara' Popum <cappy@fyralabs.com>",
    "Lleyton Grey <lleyton@fyralabs.com>",
]
categories = ["Network programming", "Configuration"]
license = "MIT"
keywords = [
    "kubernetes",
    "tunnel",
    "chisel",
    "k8s-operator",
    "operator",
    "http",
    "tcp",
    "udp",
    "networking",
]
default-run = "chisel-operator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.98", features = [
    "runtime",
    "derive",
    "rustls-tls",
    "jsonpatch",
    "client",
], default-features = false }
k8s-openapi = { version = "0.24", features = ["v1_32"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1", features = ["log", "async-await"] }
color-eyre = "0.6"
schemars = "0.8"
futures = "0.3"
thiserror = "2"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-logfmt = "0.3.4"
uuid = "1.15"
digitalocean-rs = { version = "0.1.9", default-features = false, features = [
    "default-rustls",
] }
rand = { version = "0.9.2", features = ["log", "serde"] }
async-trait = "0.1.80"
names = "0.14.0"
linode-rs = { version = "0.1.3", default-features = false, features = [
    "default-rustls",
] }
base64 = "0.22.1"
trait_enum = "0.5.0"
aws-config = { version = "1.1.1", default-features = false, features = [
    "rt-tokio",
    "behavior-version-latest",
] }
aws-sdk-ec2 = { version = "1.13.0", default-features = false, features = [
    "rt-tokio",
    "behavior-version-latest",
] }
aws-sdk-ssm = { version = "1.49.0", default-features = false, features = [
    "rt-tokio",
    "behavior-version-latest",
] }
aws-smithy-runtime = { version = "1.7.8", default-features = false, features = [
    "client",
    "connector-hyper-0-14-x",
] }
hyper-rustls = { version = "0.27.7", features = [
    "http2",
    "webpki-roots",
    "webpki-tokio",
] }
itertools = "0.14.0"
# opentelemetry = { version = "0.18.0", features = ["trace", "rt-tokio"] }
# opentelemetry-otlp = { version = "0.11.0", features = ["tokio"] }
# tonic = { version = "0.8.3" }
# tracing-opentelemetry = "0.18.0"
# opentelemetry_api = "0.18.0"
